# test_ga

.github/workflows/: c-cpp.yml  cmake-win64-min.yml  cmake-win64.yml  cmake_cfg.yml  macos.yml  test.yml  vcpkg.yml
testing/: CMakeLists.txt  basicapitest.cpp
